gitops/prometheus/prometheus/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute-https
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus.jed.local`)
    services:
    - name: prometheus-service
      port: 8080
    middlewares:
    - name: middleware-prometheus-redirect-https
      namespace: monitoring
  tls:
    secretName: prometheus-ingress

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingressroute-http
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`prometheus.jed.local`)
    services:
    - name: prometheus-service
      port: 8080
    middlewares:
    - name: middleware-prometheus-redirect-https
      namespace: monitoring

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: middleware-prometheus-redirect-https
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
